# PyImageLabeling

./: .gitignore  MANIFEST.in  PyImageLabeling.spec  PyImageLabeling_v1.0.5.spec  PyImageLabeling_v1.0.6.spec  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  tests.yml  tests_linux.yml  tests_maxos.yml  tests_windows.yml
PyImageLabeling/: PyImageLabeling.spec  __init__.py  __main__.py  combinear.qss  config.json  default_parameters.json  export.sh  label_paint_properties.json  label_rectangle_properties.json  main.py  main2.py  parameters.json  style.css
PyImageLabeling/controller/: Controller.py  EditEvents.py  Events.py  FileEvents.py  ImageEvents.py  LabelEvents.py  LabelingEvents.py  LayerEvents.py  ToolsEvents.py
PyImageLabeling/controller/settings/: ChangelabelSetting.py  ContourFillinApplyCancel.py  ContourFillinSetting.py  CoutourFillingApplyCancel.py  EraserSetting.py  GlobalOptionDialog.py  ImageOptionDialog.py  LabelSetting.py  MagicPenSetting.py  OpacitySetting.py  PaintBrushSetting.py  UndoSetting.py
PyImageLabeling/icons/: refresh.png:Zone.Identifier
PyImageLabeling/model/: Core.py  Model.py  Utils.py
PyImageLabeling/model/Edit/: HideShowLabelShortcut.py  Opacity.py
PyImageLabeling/model/File/: Files.py  LoadImage.py  NextImage.py  PreviousImage.py  SaveLayer.py
PyImageLabeling/model/Image/: MoveImage.py  ResetMoveZoomImage.py  (+2 more)
PyImageLabeling/view/: Builder.py  QBackgroundItem.py  QLabelSettingForm.py  View.py  ZoomableGraphicsView.py
build-exec/: build_exe.py
pypi/: publish_pypi.py
(+27 files in other folders)
